Rename a file 'index.html'

--- a/index3.html/stylesheet.css
+++ b/index3.html/stylesheet.css
@@ -81,7 +81,7 @@ body {
 	 padding-top: 20px;
 	 clear: both;
 	 display: grid;
-	 grid-template-columns: 70vw 30vw
+	 grid-template-columns: 70vw 30vw;
  }
  /* -------------------- main -------------------- */
  #main {
